# ant-build-center

./: .gitignore  README.md  control_center.py  findings.md  index.html  main.spec  package-lock.json  package.json  progress.md  requirements.txt  setup.py  task.md  task_plan.md  vite.config.ts
.context/test-plans/: jiang-master-test-plan-20260401-160037.md
crates/ant-build-core/: Cargo.toml
crates/ant-build-core/src/: ant_project.rs  lib.rs  runner.rs  workspace.rs
crates/ant-build-core/tests/: build_command_resolution.rs  build_execution.rs  build_file_parsing.rs  group_management.rs  project_grouping.rs  workspace_bootstrap.rs
docs/: development.md
docs/designs/: tauri-control-center-rewrite.md
examples/: sample_build.xml
scripts/: build_installer.ps1  package_deb.sh  package_linux.sh
src/: App.css  App.tsx  __init__.py  ant_executor.py  config.py  index.css  project_manager.py  types.ts  workspace_config.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundle/linux/: ant-build-center.desktop.hbs  io.github.jiang0977.ant-build-center.desktop
src-tauri/src/: lib.rs
