[package]
name = "app"
version = "1.1.0"
description = "Ant Build Center desktop control panel for grouped Ant build.xml management."
authors = ["Jiang0977"]
license = "MIT"
repository = "https://github.com/Jiang0977/ant-build-center"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
ant-build-core = { path = "../crates/ant-build-core" }
dirs = "6.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
uuid = { version = "1.23.0", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
